# symphony-gcp

./: .gitignore  .pre-commit-config.yaml  README.md  setup.cfg
community/community/testing/outils/BQExplorer/: main.py  pyproject.toml  test_generation.ipynb
community/community/testing/outils/BQExplorer/src/: transforms.py
community/testing/tools/HFWrapper/: .gitignore  play.ipynb  pyproject.toml  ruff.toml
community/testing/tools/HFWrapper/src/base/: api.py
community/testing/tools/HFWrapper/src/ego/: api.py  models.py
community/testing/tools/HFWrapper/src/hostfactory/: api.py  models.py
hf-provider/: README.md  SYMPHONY_GCE_INSTALL.md  SYMPHONY_GKE_INSTALL.md  hf-gce.spec  hf-gke.spec  hf-monitor.spec  hf-pubsub.spec  pyproject.toml  pytest.ini
hf-provider/resources/: hf-gcpgce-provider.spec  hf-gcpgke-provider.spec
hf-provider/resources/gce_cli/conf/providers/gcpgceinst/: gcpgceinstprov_config.json.dist  gcpgceinstprov_templates.json.dist
hf-provider/resources/gke_cli/conf/providers/gcpgkeinst/: gcpgkeinstprov_config.json.dist  gcpgkeinstprov_templates.json.dist
hf-provider/src/: __init__.py
hf-provider/src/common/model/: models.py
hf-provider/src/common/utils/: file_utils.py  list_utils.py  path_utils.py  profiling.py  version.py
hf-provider/src/gce_provider/: __main__.py  config.py  initialize.py  pubsub.py
hf-provider/src/gce_provider/commands/: get_request_status.py  get_return_requests.py  request_machines.py  request_return_machines.py
hf-provider/src/gce_provider/commands/helpers/: request_machine_status_helper.py  request_return_machine_status_helper.py
hf-provider/src/gce_provider/db/: gce_helpers.py  initialize.py  machines.py  reconcile.py  transaction.py
hf-provider/src/gce_provider/model/: models.py
hf-provider/src/gce_provider/utils/: client_factory.py  constants.py  instances.py  model_utils.py  process_lock.py  string_utils.py
hf-provider/src/gke_provider/: __main__.py  config.py
hf-provider/src/gke_provider/commands/: get_request_machine_status.py  get_return_requests.py  request_machines.py  request_return_machines.py
hf-provider/src/gke_provider/k8s/: __init__.py  client.py  resources.py  utils.py
hf-provider/tests/: conftest.py
hf-provider/tests/resources/get-available-templates/: get-available-templates-001.json
hf-provider/tests/resources/get-request-status/: get-request-status-001.json  get-request-status-002.json
hf-provider/tests/resources/get-return-requests/: get-return-requests-001.json
hf-provider/tests/resources/request-machines/: request-machines-001.json
hf-provider/tests/resources/request-return-machines/: request-return-machines-001.json
hf-provider/tests/unit/common/: test_models.py
hf-provider/tests/unit/common/utils/: test_list_utils.py  test_path_utils.py  test_utils.py
hf-provider/tests/unit/gce_provider/: conftest.py  fixtures.py
hf-provider/tests/unit/gce_provider/db/: test_gce_helpers.py  test_gce_machines.py
hf-provider/tests/unit/gke_provider/: conftest.py  test_client.py  test_get_request_machine_status.py  test_get_return_machine_status.py  test_request_machines.py  test_request_return_machines.py  test_resources.py
k8s-operator/: Dockerfile  MANIFEST.in  README.md  SYMPHONY_GKE_INSTALL.md  gcp_symphony_operator.run  pyproject.toml  pytest.ini  requirements-dev.txt  tox.ini
k8s-operator/build_scripts/: generate_version.py
k8s-operator/docs/: CONFIG.md  QUICKDEPLOY.md  operator-troubleshooting-guide.md
k8s-operator/src/gcp_symphony_operator/: __init__.py  __main__.py  config.py  controller.py  main.py  manifests.py  operator_context.py  profiling.py  register_handlers.py  utils.py
k8s-operator/src/gcp_symphony_operator/api/: __init__.py
k8s-operator/src/gcp_symphony_operator/api/v1/: __init__.py
k8s-operator/src/gcp_symphony_operator/api/v1/types/: gcp_symphony_resource.py  machine_return_request.py
k8s-operator/src/gcp_symphony_operator/handlers/: container_state_change.py  machine_return_request.py  pod_delete.py  preemption.py  resource_create.py  resource_update.py
k8s-operator/src/gcp_symphony_operator/k8s/: clients.py  core_v1.py  custom_objects.py
k8s-operator/src/gcp_symphony_operator/manifests/: gcp-symphony-operator.yaml.j2
k8s-operator/src/gcp_symphony_operator/manifests/crd/: gcp-symphony-crd.yaml.j2  return-request-crd.yaml.j2
k8s-operator/src/gcp_symphony_operator/manifests/namespace/: namespace.yaml.j2
k8s-operator/src/gcp_symphony_operator/manifests/rbac/: operator-clusterrole-binding.yaml.j2  operator-clusterrole.yaml.j2  operator-role-binding.yaml.j2  operator-role.yaml.j2  operator-sa.yaml.j2
k8s-operator/src/gcp_symphony_operator/workers/: cleanup.py  context.py  file_health.py  health_server.py  status_update.py
k8s-operator/tests/: conftest.py
k8s-operator/tests/ci/: CI_NOTE.md  e2e.sh  run-kind-tests.sh
k8s-operator/tests/ci/kind-tests/: 01_install_manifests.sh  02_wait_crds.sh  test_cleanup_worker_assert.sh  test_gcpsr_exists_assert.sh  test_mrr_exists_assert.sh  test_operator_running_assert.sh  test_pod_grace_period_assert.sh  test_request_machines_integration.sh  test_request_machines_running_assert.sh  test_request_resource_assert.sh  test_return_machines_assert.sh  test_return_machines_integration.sh  test_return_machines_success_assert.sh  test_return_machines_waitingcleanup_assert.sh
k8s-operator/tests/ci/kind-tests/manifests/: resource.yaml  return-resource.yaml
k8s-operator/tests/manifests/: gcp-symphony-operator.yaml.j2
k8s-operator/tests/test_integration/: test_operator_integration.py
k8s-operator/tests/test_unit/: __init__.py  test_config.py  test_controller.py  test_main.py  test_manifests.py  test_profiling.py  test_utils.py
k8s-operator/tests/test_unit/handlers/: test_container_state_change.py  test_machine_return_request.py  test_pod_delete.py  test_resource_create.py  test_resource_update.py
k8s-operator/tests/test_unit/types/: test_gcp_symphony_resource.py  test_type_machine_return_request.py
k8s-operator/tests/test_unit/workers/: test_cleanup.py  test_status_update.py
(+332 files in other folders)
