[project]
name = "outils"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.3.2",
    "pydantic>=2.11.5",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "ruff>=0.11.13",
]
dev-extra = [
    "jupyter>=1.1.1",
]
